--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,15 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>AngularIOApp</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
-</html>
+<html>
+  <head>
+    <title>Angular 2 Demo</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <!-- Configure SystemJS -->
+    <script>
+      System.import('myApp').catch(function(err){ console.error(err); });
+    </script>
+  </head>
+  <body>
+    <app-root>Please Wait...</app-root>
+  </body>
+</html> 
